# languages-learning

./: .gitignore  DEPLOY_GUIDE.md  LOCAL_GUIDE.md  MARKET_UX_ANALYSIS.md  PLAN.md  VPS_DEPLOY.md  mobile_vocab_app_technical_spec_final.md
backend/: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 43fccf15fb93_initial_schema.py  4587acf57f46_initial_schema.py  6a03a1636096_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  errors.py  rate_limit.py  security.py  timeutil.py
backend/app/models/: __init__.py  base.py  import_batch.py  language.py  language_setting.py  refresh_token.py  review_log.py  study_item.py  study_session.py  study_session_item.py  types.py  user.py  user_item_progress.py  user_setting.py
backend/app/schemas/: auth.py  common.py  dashboard.py  language.py  study_item.py  study_session.py
backend/app/services/: auth_service.py  dashboard_service.py  import_service.py  review_service.py  (+5 more)
backend/scripts/: delete_non_admin_users.sql  generate_tts.py  migrate_to_catalog.sql  reset_and_seed.ps1  seed.py  uvicorn_seed.err
backend/seed_data/: chinese_seed.csv  english_seed.csv
backend/tests/: conftest.py  test_auth_flow.py  test_import_export.py  test_languages.py  test_p1_features.py  test_security.py  test_srs_v2.py  test_study_flow.py  test_tts.py  test_weekly_and_filters.py
backend/vocab_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+42 files in other folders)
